feat: added login endpoint with jwt token
